--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 },
                 getData(){
                     const request = new XMLHttpRequest();
-                    request.open("get",'committer.json');
+                    request.open("get",'./assets/json/committer.json');
                     request.send(null);
                     request.onload = () => {
                         if(request.status == 200) {
